@@ -1,3 +1,9 @@
+2003-03-20  Radek Doulik  <rodo@ximian.com>
+
+	* spell.c (spell_check_dialog): use gtk_widget_destroy instead of
+	g_object_unref on dialog
+	use new gnome spell API version 0.3
+
 2003-03-17  Larry Ewing  <lewing@ximian.com>
 
 	* Makefile.am: install the binary in libexecdir
